// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <span>
      Default
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-info so-tag-bright"
  >
    <span>
      Info
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-danger so-tag-bright"
  >
    <span>
      Danger
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-warning so-tag-bright"
  >
    <span>
      Warning
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-success so-tag-bright"
  >
    <span>
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-bright"
    >
      <span>
        Tangerine
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-bright"
    >
      <span>
        Magenta
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-bright"
    >
      <span>
        Purple
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-bright"
    >
      <span>
        Indigo
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-bright"
    >
      <span>
        Cyan
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-bright"
    >
      <span>
        Neon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-bright"
    >
      <span>
        Lemon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-bright"
    >
      <span>
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-fill"
    >
      <span>
        Tangerine
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-fill"
    >
      <span>
        Magenta
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-fill"
    >
      <span>
        Purple
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-fill"
    >
      <span>
        Indigo
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-fill"
    >
      <span>
        Cyan
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-fill"
    >
      <span>
        Neon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-fill"
    >
      <span>
        Lemon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-fill"
    >
      <span>
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-outline"
    >
      <span>
        Tangerine
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-outline"
    >
      <span>
        Magenta
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-outline"
    >
      <span>
        Purple
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-outline"
    >
      <span>
        Indigo
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-outline"
    >
      <span>
        Cyan
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-outline"
    >
      <span>
        Neon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-outline"
    >
      <span>
        Lemon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-outline"
    >
      <span>
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-tangerine so-tag-bright-outline"
    >
      <span>
        Tangerine
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-magenta so-tag-bright-outline"
    >
      <span>
        Magenta
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-purple so-tag-bright-outline"
    >
      <span>
        Purple
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-indigo so-tag-bright-outline"
    >
      <span>
        Indigo
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-cyan so-tag-bright-outline"
    >
      <span>
        Cyan
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-neon so-tag-bright-outline"
    >
      <span>
        Neon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-lemon so-tag-bright-outline"
    >
      <span>
        Lemon
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-orange so-tag-bright-outline"
    >
      <span>
        Orange
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-bright"
    >
      <span>
        Default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-bright"
    >
      <span>
        Info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-bright"
    >
      <span>
        Danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-bright"
    >
      <span>
        Warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-bright"
    >
      <span>
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-fill"
    >
      <span>
        Default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-fill"
    >
      <span>
        Info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-fill"
    >
      <span>
        Danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-fill"
    >
      <span>
        Warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-fill"
    >
      <span>
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-outline"
    >
      <span>
        Default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-outline"
    >
      <span>
        Info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-outline"
    >
      <span>
        Danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-outline"
    >
      <span>
        Warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-outline"
    >
      <span>
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-bright-outline"
    >
      <span>
        Default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-info so-tag-bright-outline"
    >
      <span>
        Info
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-danger so-tag-bright-outline"
    >
      <span>
        Danger
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-warning so-tag-bright-outline"
    >
      <span>
        Warning
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-success so-tag-bright-outline"
    >
      <span>
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="so-tag-tag so-tag-small so-tag-default so-tag-bright"
    >
      <span>
        Small
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-default so-tag-bright"
    >
      <span>
        Default
      </span>
    </div>
    <div
      class="so-tag-tag so-tag-large so-tag-default so-tag-bright"
    >
      <span>
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="so-tag-tag so-tag-small so-tag-default so-tag-bright"
    >
      <div
        class="so-tag-inline"
      >
        <span>
          Small
        </span>
      </div>
      <div
        class="so-tag-close-icon"
      >
        <span
          class="so-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="so-tag-tag so-tag-default so-tag-bright"
    >
      <div
        class="so-tag-inline"
      >
        <span>
          Default
        </span>
      </div>
      <div
        class="so-tag-close-icon"
      >
        <span
          class="so-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="so-tag-tag so-tag-large so-tag-default so-tag-bright"
    >
      <div
        class="so-tag-inline"
      >
        <span>
          Large
        </span>
      </div>
      <div
        class="so-tag-close-icon"
      >
        <span
          class="so-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="so-tag-tag so-tag-default so-tag-bright"
    >
      <div
        class="so-tag-inline"
      >
        <span>
          Tag 1
        </span>
      </div>
      <div
        class="so-tag-close-icon"
      >
        <span
          class="so-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="so-tag-tag so-tag-default so-tag-bright"
    >
      <div
        class="so-tag-inline"
      >
        <span>
          Tag 2
        </span>
      </div>
      <div
        class="so-tag-close-icon"
      >
        <span
          class="so-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="so-tag-tag so-tag-default so-tag-bright so-tag-disabled"
    >
      <div
        class="so-tag-inline"
      >
        <span>
          Tag 3
        </span>
      </div>
      <div
        class="so-tag-close-icon"
      >
        <span
          class="so-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="so-tag-tag so-tag-default so-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span>
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-right: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <div
      class="so-tag-inline"
    >
      <span>
        Abc
      </span>
    </div>
    <div
      class="so-tag-close-icon"
    >
      <span
        class="so-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="so-tag-tag so-tag-default so-tag-bright"
  >
    <span>
      Default
    </span>
  </div>
  <div
    class="so-tag-tag so-tag-rounded so-tag-default so-tag-bright"
  >
    <span>
      Rounded
    </span>
  </div>
</div>
`;
